Fix TeamChannel Removed admin function  and css alignemnt

--- a/src/public/styles/ChannelChat.css
+++ b/src/public/styles/ChannelChat.css
@@ -228,7 +228,13 @@ body {
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
+.quote-btn{
 
+    bottom: 0px;
+    left: 5%;
+    top: 5%;
+
+}
 .remove-btn {
     top: 5px;
     right: 5px;
